# Gypsoid

./: .gitmodules  CMakeLists.txt  README
src/: gypsoid.cxx
